Brown bag basic instructions

--- a/README
+++ b/README
@@ -1,6 +1,23 @@
-"Schema management and migrations in CakePHP" Brown Bag @ Pollenizer
+"Schema management and migrations in CakePHP" Brown Bag
+=======================================================
+Pollenizer 2012-02-09
 
+This exercise will be run completely from the command line. Requirements are a
+working PHP-CLI executable and working MySQL database.
+
+Ensure your database.php is appropriately configured. You can test with:
+
+	$ ./Console/cake bake Model
+
+Should return the following on successful configuration:
+
+	Your database does not have any tables.
+
+Schema commands which will be used:
 * `generate` schema file
 	* -f param
 * `create` and dump tables based on schema file
 * `update` alter tables based on schema file
+
+Caveats
+* Column renaming
